# realtime-local-talk

./: .env.example  .gitignore  README.md  pyproject.toml
alex/: app.py  config.py  instrumentation.py  pipeline.py
alex/audio/: routing.py
alex/llm/: escalation.py  tools.py  web_search.py
alex/rag/: duckdb_store.py  embedder.py  entities.py  lancedb_store.py  vocab.py
alex/stt/: mlx_whisper_service.py
alex/turn/: echo_filter.py  keyword_router.py  transcript_buffer.py
alex/wake/: openwakeword_runner.py  ptt.py
alex/wake/trainer/: Dockerfile  README.md  recipe.yml  train_hey_alex.py
alex/web/: events.py  server.py
alex/web/static/: index.html
corpora/: entities.json  vocab.yaml
corpora/sample_notes/: 2026-Q1-credit.md  2026-Q1-duration.md  2026-Q1-em-equities.md  2026-Q1-factor-exposure.md  2026-Q1-fomc-review.md
docs/: aec-status.md  architecture.md  audio-setup.md  configuration.md
ingest_cli/: datapoints.py  pdfs.py
tests/: test_echo_filter.py  test_latency.py  test_listen.py  whisper_bias_ab.py
